# blank-generator-rs

./: Cargo.toml
.github/workflows/: build-binaries.yml
src/: app_state.rs  designs.rs  main.rs  renderer.rs  ui.rs
templates/: blanks.typ
templates/designs/: current.typ  default.typ  minimal.typ
