[package]
name = "blank-generator"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.14.0", features = ["svg"] }
num-traits = "0.2.19"
rfd = "0.15.4"
typst-bake = { version = "0.1.9", features = ["pdf", "svg"] }

[package.metadata.typst-bake]
template-dir = "./templates"
fonts-dir = "./fonts"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
panic = "abort"
